# FinSim.

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature.yml
analytics_engine/: pyproject.toml
analytics_engine/src/finsim_analytics/: __init__.py  __main__.py  analyzer.py  cli.py  csv_io.py  models.py
analytics_engine/tests/: test_analytics.py
analytics_engine/tests/fixtures/: processed_transactions.csv
docs/: architecture.md  deployment.md  github-setup.md  roadmap.md  sprint-plan.md  testing.md  vscode-setup.md
document_intelligence/: pyproject.toml
document_intelligence/src/finsim_document_intelligence.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
document_intelligence/src/finsim_parser/: __init__.py  cli.py  csv_writer.py  detector.py  extractors.py  models.py  pipeline.py  reconcile.py  text_utils.py
document_intelligence/src/finsim_parser/adapters/: __init__.py  bank_of_america.py  base.py  discover.py  midfirst.py
document_intelligence/tests/: test_adapters.py  test_contracts.py  test_text_utils.py
document_intelligence/tests/fixtures/: bank_of_america_checking_text.txt  bank_of_america_text.txt  discover_text.txt  midfirst_ocr.txt
processing_api/: pyproject.toml
processing_api/src/finsim_api/: __init__.py  accounts.py  app.py  review.py  service.py  storage.py  user_analytics.py
processing_api/tests/: test_accounts.py  test_api.py  test_review.py
src/: App.tsx  main.tsx  styles.css
transaction_processing/: pyproject.toml
transaction_processing/src/finsim_transactions/: __init__.py  cleaning.py  cli.py  contracts.py  csv_io.py  feedback.py  models.py  processor.py  rules.py
transaction_processing/src/finsim_transactions/data/: category_rules.json
transaction_processing/tests/: test_cleaning_and_rules.py  test_contracts.py  test_feedback.py  test_processing.py
transaction_processing/tests/fixtures/: transactions.csv
(+6 files in other folders)
