[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "finsim-analytics-engine"
version = "0.1.0"
description = "Analytics summaries and starter forecasts for cleaned FinSim transactions"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
