[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "finsim-processing-api"
version = "0.1.0"
description = "Temporary processing-job API for the FinSim statement pipeline"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "finsim-analytics-engine>=0.1,<1",
  "finsim-document-intelligence>=0.1,<1",
  "finsim-transaction-processing>=0.2,<1",
  "python-multipart>=0.0.20,<1",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
test = ["httpx2>=2,<3"]

[tool.setuptools.packages.find]
where = ["src"]
